# MIT-6.836-assignment

./: README.md
assn0/: Makefile  main.cpp  mouse.cpp
assn1/: README.md
assn1 with qt/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  helloworld  qtCMake.pro
assn1 with qt/build-qtCMake-Desktop_Qt_5_9_0_clang_64bit-Debug/: .qmake.stash  Makefile  ui_mainwindow.h
assn1 with qt/build-qtCMake-Desktop_Qt_5_9_0_clang_64bit-Debug/qtCMake.app/Contents/: Info.plist
assn1 with qt/helloworld_autogen/: moc_predefs.h
assn1 with qt/helloworld_autogen/EWIEGA46WW/: moc_glwidget.cpp  moc_mainwindow.cpp
assn1 with qt/helloworld_autogen/include/: ui_mainwindow.h
assn1 with qt/src/: camera.cpp  camera.h  curve.cpp  glwidget.cpp  glwidget.h  main.cpp  mainFunctions.cpp  mainFunctions.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  parse.cpp  starter1_util.cpp  starter1_util.h  vertexrecorder.cpp
assn1 with qt/swp/: weird.swp
assn1 with qt/vecmath/: Makefile  cmake_install.cmake
assn1/starter1/: CMakeCache.txt  Makefile  a1  a11  cmake_install.cmake
assn1/starter1/src/: curve.cpp  main.cpp  solve.h  surf.cpp  surfa.cpp  vertexrecorder.cpp
assn1/starter1/vecmath/: Makefile  cmake_install.cmake
assn1/starter1/vecmath/include/: Vector3f copy.h  Vector3f.h
assn1/starter2/: CMakeCache.txt  Makefile  cmake_install.cmake
assn1/starter2/src/: GLWidget.h  curvea.cpp  main.cpp  surf.cpp
assn1/starter2/swp/: core.swp  test.swp
assn1/starter2/vecmath/: Makefile  cmake_install.cmake
assn2/: README.md
assn2/starter2/: CMakeCache.txt  CMakeLists.txt  Makefile  a2  cmake_install.cmake
assn2/starter2/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
assn2/starter2/Debug/: a2
assn2/starter2/a2.build/Debug/ALL_BUILD.build/: Script-23F68B506ACC4F0A9B9170FF.sh  dgph  dgph~
assn2/starter2/a2.build/Debug/ZERO_CHECK.build/: Script-A983FA9FF81F4F99A58DABB6.sh  dgph  dgph~
assn2/starter2/a2.build/Debug/a2.build/: dgph~
assn2/starter2/a2.xcodeproj/: project.pbxproj
assn2/starter2/src/: main.cpp  matrixstack.cpp  matrixstack.h  mesh.cpp  mesh.h  mesha.cpp  skeletalmodel.cpp  skeletalmodel.h  skeletalmodela.cpp
assn2/starter2/vecmath/: Makefile  cmake_install.cmake
assn3/starter3/: CMakeCache.txt  Makefile  cmake_install.cmake
assn3/starter3/vecmath/: Makefile  cmake_install.cmake
original code/assn2/starter2/: CMakeCache.txt  Makefile  a2  cmake_install.cmake
original code/assn2/starter2/vecmath/: Makefile  cmake_install.cmake
zero/: a0  main.cpp
(+28 files in other folders)
